--- a/Hyperstore.Samples.LibrarySample/Hyperstore.Samples.LibrarySample/Hyperstore.Samples.LibrarySample.csproj
+++ b/Hyperstore.Samples.LibrarySample/Hyperstore.Samples.LibrarySample/Hyperstore.Samples.LibrarySample.csproj
@@ -14,7 +14,7 @@
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <NuGetPackageImportStamp>f8554e22</NuGetPackageImportStamp>
+    <NuGetPackageImportStamp>4139e57c</NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -37,11 +37,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Hyperstore">
-      <HintPath>..\packages\Hyperstore.0.9.26.0\lib\net451\Hyperstore.dll</HintPath>
+      <HintPath>..\packages\Hyperstore.0.9.61.0\lib\net45\Hyperstore.dll</HintPath>
+    </Reference>
+    <Reference Include="Hyperstore.Platform">
+      <HintPath>..\packages\Hyperstore.0.9.61.0\lib\net45\Hyperstore.Platform.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Collections.Immutable">
-      <HintPath>..\packages\Microsoft.Bcl.Immutable.1.0.30\lib\portable-net45+win8+wp8\System.Collections.Immutable.dll</HintPath>
+      <HintPath>..\packages\Microsoft.Bcl.Immutable.1.0.34\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
     </Reference>
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Data" />
@@ -115,12 +118,12 @@
     <Resource Include="readme.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\Hyperstore.DomainLanguage.0.9.11\build\Hyperstore.DomainLanguage.targets" Condition="Exists('..\packages\Hyperstore.DomainLanguage.0.9.11\build\Hyperstore.DomainLanguage.targets')" />
+  <Import Project="..\packages\Hyperstore.DomainLanguage.0.9.24\build\Hyperstore.DomainLanguage.targets" Condition="Exists('..\packages\Hyperstore.DomainLanguage.0.9.24\build\Hyperstore.DomainLanguage.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Hyperstore.DomainLanguage.0.9.11\build\Hyperstore.DomainLanguage.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Hyperstore.DomainLanguage.0.9.11\build\Hyperstore.DomainLanguage.targets'))" />
+    <Error Condition="!Exists('..\packages\Hyperstore.DomainLanguage.0.9.24\build\Hyperstore.DomainLanguage.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Hyperstore.DomainLanguage.0.9.24\build\Hyperstore.DomainLanguage.targets'))" />
   </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
