--- a/Hyperstore.Samples.Overview/Hyperstore.Samples.Overview/Hyperstore.Samples.Overview.csproj
+++ b/Hyperstore.Samples.Overview/Hyperstore.Samples.Overview/Hyperstore.Samples.Overview.csproj
@@ -13,7 +13,9 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
-    <NuGetPackageImportStamp>b572f08f</NuGetPackageImportStamp>
+    <NuGetPackageImportStamp>ab85bebb</NuGetPackageImportStamp>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -36,10 +38,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Hyperstore">
-      <HintPath>..\packages\Hyperstore.0.9.124.0\lib\net45\Hyperstore.dll</HintPath>
+      <HintPath>..\packages\Hyperstore.0.9.126.0\lib\net45\Hyperstore.dll</HintPath>
     </Reference>
     <Reference Include="Hyperstore.Platform">
-      <HintPath>..\packages\Hyperstore.0.9.124.0\lib\net45\Hyperstore.Platform.dll</HintPath>
+      <HintPath>..\packages\Hyperstore.0.9.126.0\lib\net45\Hyperstore.Platform.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Collections.Immutable">
@@ -75,31 +77,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Themes\BureauBlack.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Themes\BureauBlue.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Page Include="Themes\ExpressionDark.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Themes\ExpressionLight.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Themes\ShinyBlue.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Themes\ShinyRed.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Themes\WhistlerBlue.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -132,18 +110,27 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <None Include="readme.md" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Hyperstore.Samples.Common\Hyperstore.Samples.Common\Hyperstore.Samples.Common.csproj">
+      <Project>{72171685-b4fe-4a89-9122-ce87bec47a78}</Project>
+      <Name>Hyperstore.Samples.Common</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\Hyperstore.DomainLanguage.0.9.249\build\Hyperstore.DomainLanguage.targets" Condition="Exists('..\packages\Hyperstore.DomainLanguage.0.9.249\build\Hyperstore.DomainLanguage.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Hyperstore.DomainLanguage.0.9.249\build\Hyperstore.DomainLanguage.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Hyperstore.DomainLanguage.0.9.249\build\Hyperstore.DomainLanguage.targets'))" />
+    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
+    <Error Condition="!Exists('..\packages\Hyperstore.DomainLanguage.0.9.254\build\Hyperstore.DomainLanguage.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Hyperstore.DomainLanguage.0.9.254\build\Hyperstore.DomainLanguage.targets'))" />
   </Target>
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Import Project="..\packages\Hyperstore.DomainLanguage.0.9.254\build\Hyperstore.DomainLanguage.targets" Condition="Exists('..\packages\Hyperstore.DomainLanguage.0.9.254\build\Hyperstore.DomainLanguage.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
