Update with latest hyperstore version

--- a/Hyperstore.Samples.Overview/packages/repositories.config
+++ b/Hyperstore.Samples.Overview/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\..\Hyperstore.Samples.Projections\Projections\packages.config" />
   <repository path="..\Hyperstore.Samples.Overview\packages.config" />
 </repositories>
